--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "roles/headless-pi-setup"]
 	path = roles/headless-pi-setup
 	url = git@github.com:jackaltx/headless-pi-setup-on-centos8.git
+	branch = main
