--- a/roles/common/tasks/host_tz.yml
+++ b/roles/common/tasks/host_tz.yml
@@ -3,6 +3,6 @@
 - name: set the timezone
   ansible.builtin.command:
     cmd:  timedatectl set-timezone "{{ pifarm_timezone }}"
-  when: pifarm_timezone is defined and pifarm_timezone == True
+  when: pifarm_set_timezone
   notify:
     - restart timezone
