--- a/roles/worker-config/tasks/bash_profile.yml
+++ b/roles/worker-config/tasks/bash_profile.yml
@@ -2,9 +2,9 @@
 - name: 'Copy .bash_profile to home'
   copy: 
     src: bash_profile
-    dest: "{{ home_dir }}/.bash_profile"
-    owner: "{{ remote_user }}"
-    group: "{{ remote_group }}"
+    dest: "{{ ansible_env.HOME }}/.bash_profile"
+    owner: "{{ worker_user }}"
+    group: "{{ worker_group }}"
     mode: 0644
     backup: yes
   tags: bash_profile
