--- a/initialize-known-hosts.yml
+++ b/initialize-known-hosts.yml
@@ -7,28 +7,29 @@
   #  - init-cluster-farmer
   tasks:
 
-  - name: "Remove the known_hosts file on {{ inventory_hostname }}"
+  - name: "Remove the known_hosts file on {{ inventory_hostname }} "
     local_action: 
       module: file
       path: ~/.ssh/known_hosts
       state: absent
  
-  - name: "Add localhost Keys on {{ inventory_hostname }}"
+  - name: "Add localhost Keys on {{ inventory_hostname }} "
     local_action: shell ssh-keyscan -H localhost >> ~/.ssh/known_hosts
     connection: local
     ignore_errors: yes
     changed_when: False
- 
-- hosts: workers
+
+
+- hosts: workers servants
   connection: ssh
   gather_facts: no
   tasks:
 
-  - name: Add inventory Host Keys
-    local_action: shell ssh-keyscan -H {{ inventory_hostname }} >> ~/.ssh/known_hosts
-    connection: local
-    ignore_errors: yes
-    changed_when: False
+  # - name: Add inventory Host Keys "{{ ansible_host }}"
+  #   local_action: shell ssh-keyscan -H {{ inventory_hostname }} >> ~/.ssh/known_hosts
+  #   connection: local
+  #   ignore_errors: yes
+  #   changed_when: False
 
   - name: Add ip Host Keys
     local_action: shell ssh-keyscan -H {{ ansible_host }} >> ~/.ssh/known_hosts
