--- a/roles/common/tasks/base_install.yml
+++ b/roles/common/tasks/base_install.yml
@@ -1,14 +1,14 @@
 ---
 - name: Install basic packages
-  package: 
+  ansible.builtin.package: 
     name: "{{ pifarm_common_pkgs }}"
     state: present
     update_cache: true
   become: true
   register: package_out
-  tags:
-    - basic
+  
 
-- debug:
+- ansible.builtin.debug:
     var: package_out
+    verbosity: 1
 
