--- a/roles/update/tasks/main.yml
+++ b/roles/update/tasks/main.yml
@@ -11,12 +11,13 @@
     - pifarm_connected_internet 
     - ansible_os_family == "Debian" 
     - vars['ansible_distribution_release'] == 'buster'
-    - vars['ansible_machine'] == 'armv7l'
+#    - vars['ansible_machine'] == 'armv7l'
 
 
 - name: "Update Centos systems"
   include: "update_centos.yml"
   when:
+    - pifarm_connected_internet 
     - ansible_os_family == "RedHat"
     - ansible_distribution == "CentOS"
 #   - ansible_distribution_major_version == "8"
