--- a/roles/update/tasks/main.yml
+++ b/roles/update/tasks/main.yml
@@ -18,6 +18,7 @@
   include: "update_centos.yml"
   when:
     - pifarm_connected_internet 
+    - pifarm_update_centos
     - ansible_os_family == "RedHat"
     - ansible_distribution == "CentOS"
 #   - ansible_distribution_major_version == "8"
