--- a/roles/common/tasks/vlans.yml
+++ b/roles/common/tasks/vlans.yml
@@ -1,6 +1,7 @@
 ---
+
 - name: Create VLANS
-  template:
+  ansible.builtin.template:
     src: vlans.j2
     dest: "{{ net_path }}/vlans"
   loop: "{{ host_vlans }}"
@@ -9,8 +10,8 @@
     - host_vlans is defined
     - host_vlans|length > 0
 
-- name: Remove vlan file
-  file:
+- name: Remove VLAN file
+  ansible.builtin.file:
     path: "{{ net_path }}/vlans"
     state: absent
   register: vlan_result
@@ -18,6 +19,7 @@
   when:
     - (host_vlans is not defined) or ( host_vlans is defined and host_vlans|length == 0)
 
-- debug:
+- name: VLAN file removal result
+  ansible.builtin.debug:
     var: vlan_result
  
