--- a/roles/common/tasks/dnsmasq.yml
+++ b/roles/common/tasks/dnsmasq.yml
@@ -1,16 +1,17 @@
 ---
-    # dnsmasq 
+  
 - name: Install dnsmasq
-  apt: 
+  ansible.builtin.apt: 
     name: dnsmasq
     state: present
 
 - name: Stop dnsmasq
-  service:
+  ansible.builtin.service:
     name: dnsmasq
     state: stopped
 
-- copy: 
+- name: Install configuration File
+  ansible.builtin.copy: 
     src: dnsmasq.conf
     dest: /etc/dnsmasq.conf
     owner: root
@@ -19,6 +20,6 @@
     backup: yes
 
 - name: Start dnsmasq
-  service:
+  ansible.builtin.service:
     name: dnsmasq
     state: started
