--- a/roles/common/tasks/ruby.yml
+++ b/roles/common/tasks/ruby.yml
@@ -1,14 +1,15 @@
 ---
 
 - name: Install ruby
-  package: 
+  ansible.builtin.package: 
     name: ruby
     state: present
     update_cache: true
   register: package_out
   become: true
 
-- debug:
+- name: Ruby Package Outputs
+  ansible.builtin.debug:
     var: package_out
     verbosity: 1
 
