--- a/roles/common/tasks/tmux.yml
+++ b/roles/common/tasks/tmux.yml
@@ -1,11 +1,12 @@
 ---
 - name: Install tmux
-  package: 
+  ansible.builtin.package: 
     name: tmux
     state: present
     update_cache: true
   register: package_out
 
-- debug:
+- name: tmux install results
+  ansible.builtin.debug:
     var: package_out
 
