--- a/initialize-known-hosts.yml
+++ b/initialize-known-hosts.yml
@@ -3,39 +3,49 @@
 - hosts: farmer
   connection: ssh
   gather_facts: no
-  #roles:
-  #  - init-cluster-farmer
   tasks:
 
-  - name: "Remove the known_hosts file on {{ inventory_hostname }} "
-    local_action: 
-      module: file
+  - name: "Remove the known_hosts file on {{ inventory_hostname }} ({{ ansible_host }}) "
+    ansible.builtin.file: 
       path: ~/.ssh/known_hosts
-      state: absent
- 
-  - name: "Add localhost Keys on {{ inventory_hostname }} "
-    local_action: shell ssh-keyscan -H localhost >> ~/.ssh/known_hosts
+      mode: 0644
+      state: absent 
+
+  # Note: I must use the shell module for ssh-keyscan to work :(
+
+  - name: "Add localhost Keys on {{ inventory_hostname }} ({{ ansible_host }}) "
+    ansible.builtin.shell: "ssh-keyscan -H localhost >> ~/.ssh/known_hosts"
     connection: local
-    ignore_errors: yes
+    register: shell_result
+    # failed_when: shell_result.rc !=0
     changed_when: False
 
+  - name: shell_result
+    ansible.builtin.debug:
+      var: shell_result
+      verbosity: 1
+
+  - name: "Add local ip Keys on {{ inventory_hostname }} ({{ ansible_host }}) "
+    ansible.builtin.shell: "ssh-keyscan -H {{ ansible_host }} >> ~/.ssh/known_hosts"
+    connection: local
+    register: shell_result
+    # failed_when: shell_result.rc !=0
+    changed_when: False
+
+  - name: shell_result
+    ansible.builtin.debug:
+      var: shell_result
+      verbosity: 1
 
 - hosts: 
-    - workers 
+    - workers
     - helpers
   connection: ssh
   gather_facts: no
   tasks:
 
-  # - name: Add inventory Host Keys "{{ ansible_host }}"
-  #   local_action: shell ssh-keyscan -H {{ inventory_hostname }} >> ~/.ssh/known_hosts
-  #   connection: local
-  #   ignore_errors: yes
-  #   changed_when: False
-
-  - name: Add ip Host Keys
+  - name: Add inventory Host Keys for  workers and helpers"
     local_action: shell ssh-keyscan -H {{ ansible_host }} >> ~/.ssh/known_hosts
     connection: local
     ignore_errors: yes
     changed_when: False
-
