--- a/roles/common/tasks/scipy.yml
+++ b/roles/common/tasks/scipy.yml
@@ -1,8 +1,8 @@
 ---
 
 - name: Install scipy
-  apt: 
-    ansible.builtin.pkg:
+  ansible.builtin.apt: 
+    pkg:
     - "python-numpy"
     - "python-pickleshare"
     - "python-scipy"
