--- a/farm-tools/role_dnsmasq/tasks/main.yml
+++ b/farm-tools/role_dnsmasq/tasks/main.yml
@@ -25,4 +25,7 @@
     tags: ["dnsmasq", "configure"]
 
   when:
-      - pifarm_install_dnsmasq
+    - pifarm_install_dnsmasq
+    
+  # tags:
+  #  - setup_dnsmasq
