--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -2,6 +2,7 @@
 
 - name: "Include {{ ansible_os_family }} vars"
   include_vars: "{{ ansible_os_family }}.yml"
+  tags: always
 
 - include: host_name.yml
   when: pifarm_set_hostname
@@ -10,6 +11,9 @@
   when: pifarm_set_timezone
 
 - include: hosts_file.yml
+
+- include: mount_u01.yml
+  when: pifarm_mount_usb_drive
 
 - block:
 
