--- a/roles/farmer_config/tasks/rabbitmq-server.yml
+++ b/roles/farmer_config/tasks/rabbitmq-server.yml
@@ -1,11 +1,10 @@
 ---
+
 - name: Install rabbitq server
-  apt:
+  ansible.builtin.apt:
     name: "{{ item }}" 
     state: present
   with_items:
     - erlang
     - rabbitmq-server
-
-
 
