--- a/roles/worker_config/defaults/main.yml
+++ b/roles/worker_config/defaults/main.yml
@@ -4,4 +4,7 @@
 pifarm_connected_internet: True
 
 # Don't put in the prometheus node exporter
-pifarm_configure_node_exporter: False
+pifarm_node_exporter: False
+
+# The Prometheus monitor server
+prometheus_monitor_ip:  '127.0.0.1'
