--- a/roles/update/tasks/main.yml
+++ b/roles/update/tasks/main.yml
@@ -12,7 +12,7 @@
     - pifarm_connected_internet 
     - ansible_os_family == "Debian" 
     - vars['ansible_distribution_release'] == 'buster'
-#    - vars['ansible_machine'] == 'armv7l'
+    - vars['ansible_machine'] == 'aarch64'
 
 
 - name: "Update Centos systems"
