--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ roles/ansible-role-grafana/
 
 # preserve the running configuration
 # add how to set these files up in the documentation
-farm.yml
+farm/*
 
 # SMELL remove when ready
 group_vars/farmer
