--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-INVENTORY = farm.yml
+#INVENTORY = farm.yml
+inventory = farm
 retry_files_enabled = False
 callback_whitelist = profile_tasks
 forks = 10
