--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = roles/headless-pi-setup
 	url = git@github.com:jackaltx/headless-pi-setup-on-centos8.git
 	branch = main
+[submodule "roles/k3s_ansible"]
+	path = roles/k3s_ansible
+	url = git@github.com:jackaltx/k3s-ansible.git
+	branch = master
