helper1 disk crashed...fixed issues??

--- a/roles/common/tasks/host_tz.yml
+++ b/roles/common/tasks/host_tz.yml
@@ -10,6 +10,7 @@
     changed_when: false
     
   - name: set the timezone if required
+    become: true
     ansible.builtin.command:
       cmd:  timedatectl set-timezone "{{ pifarm_timezone }}"
     when: pifarm_timezone not in results.stdout
